<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.appflyer_clarat.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4b528"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/flogo"
            app:srcCompat="@drawable/f" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rflogo"
            app:srcCompat="@drawable/rf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:contentDescription="@string/flogo"
            app:srcCompat="@drawable/flogo" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/rflogo"
            app:srcCompat="@drawable/rflogo" />

    </LinearLayout>

    <TextView
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL2"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.74"
        android:background="#f6eedc"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/descr"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/descr"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#f4b528"
        android:gravity="center">


        <TextView
            android:id="@+id/HP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/url"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.54"
            android:fontFamily="sans-serif"
            android:text="@string/mail"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

